# EDAN70

./: README.md  clean.sh  do.sh
test/: false_sharing.c  false_sharing_struct.c  makefile  timer.h
test/false_sharing_test/: makefile  timer.c
test/false_sharing_valgrind/: false_sharing_valgrind.c  makefile
valgrind-3.13.0/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  fdo.sh  valgrind.pc
valgrind-3.13.0/VEX/: Makefile
valgrind-3.13.0/autom4te.cache/: output.1  requests  traces.0  traces.1
valgrind-3.13.0/auxprogs/: Makefile
valgrind-3.13.0/cachegrind/: Makefile
valgrind-3.13.0/cachegrind/tests/: Makefile
valgrind-3.13.0/callgrind/: Makefile
valgrind-3.13.0/callgrind/tests/: Makefile
valgrind-3.13.0/coregrind/: Makefile
valgrind-3.13.0/docs/: Makefile
valgrind-3.13.0/drd/: Makefile
valgrind-3.13.0/drd/tests/: Makefile
valgrind-3.13.0/exp-bbv/: Makefile
valgrind-3.13.0/exp-bbv/tests/: Makefile
valgrind-3.13.0/exp-dhat/: Makefile
valgrind-3.13.0/exp-dhat/tests/: Makefile
valgrind-3.13.0/exp-sgcheck/: Makefile
valgrind-3.13.0/exp-sgcheck/tests/: Makefile
valgrind-3.13.0/falsegrind/: Makefile.am  Makefile.in  fg_main.c  fg_main_old.c
valgrind-3.13.0/falsegrind/docs/: Makefile  Makefile.in
valgrind-3.13.0/falsegrind/tests/: Makefile.in
valgrind-3.13.0/gdbserver_tests/: Makefile
valgrind-3.13.0/gdbserver_tests/solaris/: Makefile
valgrind-3.13.0/helgrind/: Makefile
valgrind-3.13.0/helgrind/.deps/: helgrind_amd64_linux-hg_main.Po
valgrind-3.13.0/helgrind/tests/: Makefile
valgrind-3.13.0/include/: Makefile
valgrind-3.13.0/lackey/: Makefile  lk_main.c
valgrind-3.13.0/lackey/tests/: Makefile
valgrind-3.13.0/massif/: Makefile
valgrind-3.13.0/massif/.deps/: massif_amd64_linux-ms_main.Po
valgrind-3.13.0/massif/tests/: Makefile
valgrind-3.13.0/memcheck/: Makefile
valgrind-3.13.0/memcheck/.deps/: memcheck_amd64_linux-mc_leakcheck.Po  memcheck_amd64_linux-mc_main.Po  memcheck_amd64_linux-mc_malloc_wrappers.Po
valgrind-3.13.0/memcheck/tests/: Makefile
valgrind-3.13.0/mpi/: Makefile
valgrind-3.13.0/none/: Makefile
valgrind-3.13.0/none/tests/: Makefile
valgrind-3.13.0/perf/: Makefile
valgrind-3.13.0/shared/: Makefile
valgrind-3.13.0/solaris/: Makefile
valgrind-3.13.0/tests/: Makefile
(+43 files in other folders)
